--- a/backend/backend/package.json
+++ b/backend/backend/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^6.6.0",
     "@types/express": "^5.0.1",
     "@types/node": "^22.14.0",
     "dotenv": "^16.4.7",
@@ -17,6 +18,7 @@
     "grammy": "^1.35.1",
     "nodemon": "^3.1.9",
     "pg": "^8.14.1",
+    "prisma": "^6.6.0",
     "ts-node": "^10.9.2",
     "typeorm": "^0.3.22",
     "typescript": "^5.8.3"
