--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^6.6.0",
     "@types/express": "^5.0.1",
     "@types/node": "^22.14.0",
     "axios": "^1.6.7",
@@ -23,6 +24,7 @@
     "grammy": "^1.35.1",
     "nodemon": "^3.1.9",
     "pg": "^8.14.1",
+    "prisma": "^6.6.0",
     "telegraf": "^4.16.3",
     "ts-node": "^10.9.2",
     "typeorm": "^0.3.22",
